# application

./: .env.example  README.md  pyproject.toml
app/providers/: app.py
bootstrap/: providers.py
config/: logging.py  services.py
